tests/negative/issue1337/Braces.juvix
module Braces;

type Nat :=
  O : Nat |
  S : Nat -> Nat;

fun : Nat -> Nat;
fun (S {S {x}}) := x;

end;
